--- a/style.css
+++ b/style.css
@@ -6,25 +6,35 @@
 html {
   scroll-behavior: smooth;
 }
+body {
+  font-family: "Cairo", sans-serif;
+  background-color: #141d2f;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #0079ff;
+}
+::-webkit-scrollbar-track {
+  background-color: #aaa;
+}
+::selection {
+  background-color: #0079ff;
+  color: #fff;
+}
 .container {
   width: 700px;
-  padding: 20px 20px;
-  margin-right: auto;
-  margin-left: auto;
+  padding: 20px;
+  margin: 0 auto;
+  position: relative;
+  transition: 0.3s;
 }
 @media (max-width: 767px) {
   .container {
-    width: 100%;
+    width: 350px;
   }
 }
-
-body {
-  font-family: "Cairo", sans-serif;
-  background-color: #212121;
-  width: 100%;
-  height: 100vh;
-}
-
 h3 {
   margin-bottom: 30px;
   text-align: center;
@@ -35,51 +45,64 @@ p {
   color: white;
   padding: 10px;
   margin-bottom: 200px;
-  border: 1px solid white;
-  min-height: calc(100vh - 200px);
-  width: 650px;
-  font-size: 16px;
+  background-color: #1e2a47;
+  width: 100%;
   border-radius: 12px;
   transition: 0.5s;
 }
 @media (max-width: 767px) {
   p {
-    width: 95%
+    margin-bottom: 120px;
   }
 }
 textarea {
+  width: 650px;
   color: white;
   position: fixed;
-  width: 650px;
   height: 64px;
   max-height: 150px;
   padding: 16px 20px 14px;
   font-size: 16px;
-  background-color: black;
-  border-radius: 25px;
-  left: calc((100% - 650px) / 2);
+  background-color: #1e2a47;
+  border-radius: calc(64px / 2);
   bottom: 20px;
-  border: 1px solid white;
+  border: 1px solid #c8cde329;
   resize: none;
   outline: none;
   transition: 0.3s;
+  box-shadow: 0 0 4px 0px #141d2f;
 }
 @media (max-width: 767px) {
   textarea {
-    width: 90%;
-    left: 5%;
+    width: 310px;
+    max-height: 100px;
   }
 }
 textarea::-webkit-scrollbar {
   width: 10px;
-  background-color: transparent;
-}
-textarea::-webkit-scrollbar-track {
-  background-color: transparent;
-  border-radius: 5px;
-
 }
 textarea::-webkit-scrollbar-thumb {
-  background-color: aqua;
-  border-radius: 20px;
+  background-color: #0079ff;
+}
+textarea::-webkit-scrollbar-track {
+  background-color: #aaa;
+}
+input[type='submit'] {
+  background-color: #0079ff;
+  color: white;
+  padding: 5px 12px;
+  border-radius: 5px;
+  border: 2px solid #c8cde329;
+  font-size: 16px;
+  position: fixed;
+  bottom: 36px;
+  margin-left: auto;
+  display: block;
+  transform: translatex(555px);
+}
+@media (max-width: 767px) {
+  input[type='submit'] {
+    transform: translateX(222px);
+    bottom: 37px;
+    }
 }
